src/main/java/org/example/Solid/good/l/LSP_good.java
package org.example.Solid.good.l;

public class LSP_good {
}
