src/main/java/org/example/Solid/bad/l/LSP_bad.java
package org.example.Solid.bad.l;

public class LSP_bad {
}
